Make sure dialogs do not spill over window height

--- a/src/app/deviceset/change-device-dialog/change-device-dialog.component.css
+++ b/src/app/deviceset/change-device-dialog/change-device-dialog.component.css
@@ -1,5 +1,5 @@
 .available-devices-input {
-    width: 35ch;
+    width: 38ch;
     margin-top: 10px;
     margin-bottom: 10px;
 }
